--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next-auth": "^5.0.0-beta.25",
     "prisma": "^6.3.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "swr": "^2.3.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
