--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
+    "@nanostores/react": "^0.8.4",
     "@prisma/client": "^6.3.1",
+    "nanostores": "^0.11.4",
     "next": "15.1.6",
     "next-auth": "^5.0.0-beta.25",
     "prisma": "^6.3.1",
